# my-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/checkpoints/: __init__.py
app/agent/executor/: __init__.py
app/agent/planner/: __init__.py  base.py
app/agent/policy/: __init__.py  base.py
app/agent/runtime/: __init__.py  service.py  types.py
app/agent/session/: __init__.py
app/api/routes/: health.py
app/config/: settings.py
app/memory/long_term/: __init__.py
app/memory/retrieval/: __init__.py
app/memory/short_term/: __init__.py  base.py
app/models/: __init__.py
app/models/llm/: base.py
app/observability/logging/: config.py  uvicorn.json
app/observability/token_usage/: __init__.py  base.py
app/security/: __init__.py
app/security/acl/: __init__.py
app/security/auth/: __init__.py
app/security/sandbox/: __init__.py
app/storage/vector/: __init__.py
app/tools/connectors/: __init__.py
app/tools/executors/: __init__.py  base.py
app/tools/registry/: base.py
app/workers/: __init__.py
docs/superpowers/plans/: 2026-07-05-agent-runtime-execution-loop.md  2026-07-05-python-agent-application-phases.md
docs/superpowers/specs/: 2026-07-05-python-agent-application-design.md
migrations/: README.md
tests/: test_health.py  test_logging.py  test_planner.py  test_runtime.py  test_token_usage.py  test_tool_executor.py
